# CICV

./: .gitignore  docker_run.sh  docker_run_dpi.sh  docker_run_plannerTrack.sh  docker_run_ros2vtd.sh  docker_run_stattion.sh  docker_run_vtd2ros.sh  readme.txt
catkin_ws/src/Message/devel/: .catkin  local_setup.sh
catkin_ws/src/Message/devel/include/can_msgs/: CAN32A.h
catkin_ws/src/Message/devel/include/canbus_msgs/: CanFault.h
catkin_ws/src/Message/devel/include/common_msgs/: CICV_Location.h  CalibrationResult.h  DRPoseWithTime.h  EulerWithCovariance.h  FaultInfo.h  FaultVec.h  Header.h  LLH.h  Lane.h  Lanes.h  LidarCalibrationResult.h  Marker.h  MarkerArray.h  MissionPoint.h  NavStatus.h  Perceptionobject.h  Perceptionobjects.h  Pose.h  PoseEuler.h  PoseQuaternion.h  Quaternion.h  RoutePlan.h  SingleTrafficLight.h  TimeStatistics.h  TimeStatus.h  TrafficLightDetection.h  Trajectory.h  TrajectoryPoint.h  Twist.h  UdpMsg.h  UnsureVar.h  Vector3.h  Vector3WithCovariance.h  Vehicle_Control.h  Vehicle_Feedback.h  object.h  objects.h  request.h  response.h
catkin_ws/src/Message/devel/include/control_msgs/: control_sys.h
catkin_ws/src/Message/devel/include/diag_msgs/: ErrorcodeInfo.h  ErrorcodeVec.h  FaultHmi.h  FaultHmiVec.h
catkin_ws/src/Message/devel/include/imu/: LocalizationControl.h  SensorImu.h
catkin_ws/src/Message/devel/include/lidar_msgs/: Centroids.h  CloudCluster.h  CloudClusterArray.h  DetectedObject.h  DetectedObjectArray.h  ObjFusion.h
catkin_ws/src/Message/devel/include/map_msgs/: MissionPoint.h  RoutePlan.h
catkin_ws/src/Message/devel/include/navi_msgs/: NavParas.h  NavPose.h  NaviHmi.h  NaviTask.h  NaviTaskStatus.h  Point2D.h  StationPoint.h  SysInfo.h  TimeStamp.h  VehHeader.h  VehPosition.h  VehStatus.h  WifiInfo.h
catkin_ws/src/Message/devel/include/perception_msgs/: CameraObject.h  CameraObjectList.h  CameraTrafficLight.h  CameraTrafficLightList.h  CameraTrafficSign.h  CameraTrafficSignList.h  CtrlTest.h  LidarObject.h  LidarObjectList.h  Object.h  ObstacleCell.h  PerceptionLocalization.h  PerceptionObjects.h  Point2D.h  RadarObject.h  RadarObjectList.h  SingleTrafficLight.h  TrafficLightDetection.h  Trajectory.h  TrajectoryInfo.h  TrajectoryPoint.h  UltraCell.h  UltrasonicParking.h
catkin_ws/src/Message/devel/lib/pkgconfig/: can_msgs.pc  canbus_msgs.pc  common_msgs.pc  control_msgs.pc  diag_msgs.pc  imu.pc  lidar_msgs.pc  map_msgs.pc  navi_msgs.pc  perception_msgs.pc
catkin_ws/src/Message/devel/share/can_msgs/cmake/: can_msgs-msg-paths.cmake  can_msgsConfig.cmake
catkin_ws/src/Message/devel/share/canbus_msgs/cmake/: canbus_msgs-msg-paths.cmake  canbus_msgsConfig.cmake
catkin_ws/src/Message/devel/share/common_msgs/cmake/: common_msgs-msg-paths.cmake  common_msgsConfig.cmake
catkin_ws/src/Message/devel/share/control_msgs/cmake/: control_msgs-msg-extras.cmake  control_msgs-msg-paths.cmake  control_msgsConfig.cmake
catkin_ws/src/Message/devel/share/diag_msgs/cmake/: diag_msgs-msg-paths.cmake  diag_msgsConfig.cmake
catkin_ws/src/Message/src/common_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/Message/src/common_msgs/msg/: FaultInfo.msg  Header.msg  LidarCalibrationResult.msg  PoseEuler.msg  Quaternion.msg  SpeedStreer.msg  TimeStatistics.msg  Twist.msg  UdpMsg.msg  UnsureVar.msg  request.msg
catkin_ws/src/Message/src/perception_msgs/: CMakeLists.txt
catkin_ws/src/Message/src/perception_msgs/msg/: CameraObjectList.msg.bk  Object.msg  PerceptionLocalization_old.msg  TrajectoryPoint.msg
catkin_ws/src/control/: CMakeLists.txt
catkin_ws/src/control/include/: metaController.h  newpid.h
catkin_ws/src/control/include/lat_control/: lqr_control.h  pure_pursuit_controller.h
catkin_ws/src/control/include/lon_control/: tool.h
catkin_ws/src/control/include/msg_gen/: CalibrationResult.h  Control_Test.h  DRPoseWithTime.h  EulerWithCovariance.h  FaultInfo.h  FaultVec.h  Header.h  LLH.h  LidarCalibrationResult.h  NavStatus.h  Pose.h  PoseEuler.h  PoseQuaternion.h  Quaternion.h  Retrieval.h  SpeedStreer.h  TimeStatistics.h  TimeStatus.h  Twist.h  UdpMsg.h  UnsureVar.h  Vector3.h  Vector3WithCovariance.h  request.h  response.h
catkin_ws/src/control/launch/: control.launch
catkin_ws/src/control/src/: control_node.cc  control_training.cc  controller.cc  newpid.cc
catkin_ws/src/control/src/lat_control/: lqr_controller.cc  pure_pursuit_controller.cc
catkin_ws/src/global_routing/: CMakeLists.txt
catkin_ws/src/global_routing/src/: routing_pub.cc
catkin_ws/src/planning/: CMakeLists.txt  ciac.rviz
catkin_ws/src/planning/include/: planning_base.h
catkin_ws/src/planning/include/common/: Perceptionobjects.h
catkin_ws/src/planning/include/lattice/: collision_checker.h  end_condition_sampler.h  lattice.h  path_time_graph.h  prediction_querier.h  trajectory1d_generator.h
catkin_ws/src/planning/include/map_msgs/: MissionPoint.h  RoutePlan.h
catkin_ws/src/planning/include/obstacle/: Obstacle.h  boundarys.h
catkin_ws/src/planning/include/path/: FrenetPath.h  path_matcher.h
catkin_ws/src/planning/include/reference_line/: reference_line.h
catkin_ws/src/planning/launch/: planning.launch  pnc.launch
catkin_ws/src/planning/src/: planning.cc
catkin_ws/src/planning/src/common/: Config.cc  PlanningTarget.cc  configs.yaml
catkin_ws/src/planning/src/lattice/: collision_checker.cc  end_condition_sampler.cc  lattice.cc  path_time_graph.cc  prediction_querier.cc  trajectory1d_generator.cc  trajectory_evaluator.cc
catkin_ws/src/planning/src/obstacle/: Obstacle.cc  Obstacle_avoid.cc
catkin_ws/src/planning/src/path/: path_matcher.cc
catkin_ws/src/planning/src/reference_line/: reference_line.cc
资料/: 附件2-决策规划模块交互接口v1.1.xlsx
附件2-perception_msgs/perception_msgs/msg/: SingleTrafficLight.msg  TrajectoryInfo.msg
附件3-common_msgs/common_msgs/msg/: CalibrationResult.msg  Control_Test.msg  DRPoseWithTime.msg  EulerWithCovariance.msg  FaultVec.msg  LLH.msg  NavStatus.msg  Pose.msg  PoseQuaternion.msg  Retrieval.msg  TimeStatus.msg  Vector3.msg  Vector3WithCovariance.msg  response.msg
(+500 files in other folders)
